--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
-
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-Hant">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,9 +8,10 @@
 </head>
 <body>
     <div class="container">
-        <h1>Psychological Test</h1>
+        <h1>十六型人格測驗</h1>
         <p>Answer the following questions:</p>
-        <div id="question"></div>
+        <div id="問題"></div>
+        <div id="選項"></div>
         <button onclick="nextQuestion()">Next</button>
         <div id="result"></div>
     </div>
